--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install coverage
+          pip install pytest
       - name: Run Unit Tests
         run: |
           coverage run -m pytest src/tests/test_math_operation.py src/tests/test_employee_details.py
