--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
           pip install pytest
       - name: Run Unit Tests
         run: |
-          coverage run -m pytest src/tests/test_math_operation.py src/tests/test_employee_details.py
+          coverage run -m pytest src/tests/
