--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,2 @@
-name: Run Unit Test Case
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  test:
-    name: Run test cases
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install coverage
-          pip install pytest
-      - name: Run Unit Tests
-        run: |
-          coverage run -m pytest src/tests/
+- name: Debug directory contents
+  run: ls -R
