--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           pip install pytest
       - name: Run Unit Tests
         run: |
-          coverage run -m pytest /home/runner/work/Demo-Repo-for-actions/Demo-Repo-for-actions/src/tests/
+          coverage run -m pytest src/
 
 
 
