--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,9 @@ jobs:
           pip install pytest
       - name: Change working directory to src/tests
         run: cd Demo-Repo-for-actions/src/tests
-        working-directory: ./Demo-Repo-for-actions
+        working-directory: Demo-Repo-for-actions
       - name: check folder
         run: pwd
       - name: Run Unit Tests
         run: |
           coverage run -m pytest tests/
-          
