--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install coverage
           pip install pytest
-      - name: Change working directory to src/tests
-        run: cd Demo-Repo-for-actions/src/tests
-        working-directory: Demo-Repo-for-actions
-      - name: check folder
-        run: pwd
       - name: Run Unit Tests
         run: |
-          coverage run -m pytest tests/
+          coverage run -m pytest Demo-Repo-for-actions/src/tests
+        working-directory: Demo-Repo-for-actions
