--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
-        working-directory: Demo-Repo-for-actions
+        # working-directory: Demo-Repo-for-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
