--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,20 +13,24 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
-        # working-directory: Demo-Repo-for-
+
+      - name: Clone repository
+        uses: actions/checkout@v2
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install coverage
           pip install pytest
-        working-directory: Demo-Repo-for-actions
+        working-directory: ./Demo-Repo-for-actions
+
       - name: Change working directory to src/tests
         run: echo "Changed directory to src/tests"
-        working-directory: Demo-Repo-for-actions/src/tests
+        working-directory: ./Demo-Repo-for-actions/src/tests
+
       - name: check folder
         run: pwd
-        working-directory: Demo-Repo-for-actions/src/tests
+
       - name: Run Unit Tests
         run: |
           coverage run -m pytest tests/
-        working-directory: Demo-Repo-for-actions/src/tests
