--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
         run: docker run -d --name sonarqube -p 9000:9000 sonarqube
 
       - name: generate a sonarqube report
-        run: sonar-scanner.bat -D"sonar.projectKey=Demo-project" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000" -D"sonar.token=sqb_f52d21c2f2ae51a44bf5ed8c2eac509ca01e79af"
+        run: sonar-scanner -D"sonar.projectKey=Demo-project" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000" -D"sonar.login=sqb_f52d21c2f2ae51a44bf5ed8c2eac509ca01e79af"
 
 
