--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,16 @@ jobs:
           curl -sSLo /tmp/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
           sudo unzip -d /opt /tmp/sonar-scanner.zip
           sudo ln -s /opt/sonar-scanner-4.6.2.2472-linux/bin/sonar-scanner /usr/local/bin/sonar-scanner
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
       - name: Get into Directory
         run: |
          cd src/tests/
          coverage run -m pytest test_math_operations.py test_employee_details.py
-      # - name: Pull SonarQube Docker Image
-      #   run: docker pull sonarqube:latest
+      - name: Log in to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      
+      - name: Check SonarQube Docker Image
+        run: docker images
 
       # - name: Run SonarQube Server
       #   run: docker run -d --name sonarqube -p 9000:9000 sonarqube
