--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Run Unit Test Case
+name: Run Unit Test Case with SonarQube Analysis
 on:
   push:
     branches:
@@ -6,41 +6,54 @@ on:
 
 jobs:
   test:
-    name: Run test cases
+    name: Run test cases and analyze code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install coverage
           pip install pytest
-          curl -sSLo /tmp/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
-          sudo unzip -d /opt /tmp/sonar-scanner.zip
-          sudo ln -s /opt/sonar-scanner-4.6.2.2472-linux/bin/sonar-scanner /usr/local/bin/sonar-scanner
+
       - name: Get into Directory
         run: |
          cd src/tests/
-         coverage run -m pytest test_math_operations.py test_employee_details.py
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Pull soanrqube
-        run: docker pull sonarqube
-      - name: Check SonarQube Docker Image
-        run: docker images
+      - name: Run the test cases
+        run: coverage run -m pytest test_math_operations.py test_employee_details.py
 
-      - name: Run SonarQube Server
-        run: docker run -d --name sonarqube -p 9000:9000 sonarqube
+
+      - name: Pull SonarQube Docker Image
+        run: docker pull sonarqube:latest
+
       - name: Start SonarQube Server
-        run: docker start sonarqube
+        run: docker run -d --name sonarqube -p 9000:9000 sonarqube:latest
 
-      - name: generate a sonarqube report
-        run: sonar-scanner -D"sonar.projectKey=Demo-project" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000" -D"sonar.login=sqb_f52d21c2f2ae51a44bf5ed8c2eac509ca01e79af"
+      - name: Wait for SonarQube to start
+        run: sleep 3
 
+      - name: Create SonarQube Project
+        run: |
+          PROJECT_KEY=$(curl -u admin:admin -X POST "http://localhost:9000/api/projects/create?name=YourProjectName&project=YourProjectKey" | jq -r '.projectKey')
+          echo "SonarQube project key: $PROJECT_KEY"
+          PROJECT_TOKEN=$(curl -u admin:admin -X POST "http://localhost:9000/api/user_tokens/generate?name=YourProjectToken&login=admin" | jq -r '.token')
+          echo "SonarQube project token: $PROJECT_TOKEN"
 
+      - name: Run SonarScanner
+        run: |
+          sonar-scanner \
+            -D"sonar.projectKey=$PROJECT_KEY" \
+            -D"sonar.sources=." \
+            -D"sonar.host.url=http://localhost:9000" \
+            -D"sonar.login=$PROJECT_TOKEN"
+
+      - name: Stop SonarQube Server
+        run: docker stop sonarqube
