--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -27,3 +27,37 @@ jobs:
         run: |
           cd src/tests/
           coverage run -m pytest test_math_operations.py test_employee_details.py
+
+      - name: Generate coverage report
+        run: |
+          coverage report -m > coverage.txt
+          coverage html -d coverage_html
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: coverage_html
+
+  push-coverage:
+    name: Push coverage report
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download coverage report
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage-report
+          path: coverage_html
+
+      - name: Commit and push coverage report
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git checkout main
+          git add coverage_html
+          git commit -m "Add coverage report"
+          git push origin main
