--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Generate coverage report
         run: |
-          coverage report -m > coverage.txt
+          coverage report -m
           coverage html -d coverage_html
 
       - name: Upload coverage report
