--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -31,7 +31,7 @@ jobs:
           coverage html -d coverage_html
           
       - name: List coverage report files
-        run: ls -R coverage_html
+        run: ls
         
       - name: Upload coverage report
         uses: actions/upload-artifact@v2
