--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -29,17 +29,12 @@ jobs:
           coverage run -m pytest test_math_operations.py test_employee_details.py
           coverage report -m > coverage.txt
           coverage html -d coverage_html
-          
-      - name: List coverage report files
-        run: |
-            cd src/tests
-            ls
         
       - name: Upload coverage report
         uses: actions/upload-artifact@v2
         with:
           name: coverage-report
-          path: coverage_html
+          path: src/tests/coverage_html
 
   push-coverage:
     name: Push coverage report
