--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: coverage-report
-          path: src/tests/coverage_html
+          path: coverage_html/
 
   push-coverage:
     name: Push coverage report
