--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: coverage-report
-          path: coverage_html/
+          run: cd src/tests/
+          path: coverage_html
 
   push-coverage:
     name: Push coverage report
