--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -52,10 +52,13 @@ jobs:
       - name: Check files
         run: ls
 
-      - name: Commit and push coverage report
+      - name: Set config
         run: |
           git config user.name 'CoderApple'
           git config user.email 'charanb0410@gmail.com'
+      - name: Check branch and push
+        run: |
+          git branch
           git add coverage_html
           git commit -m "Add coverage report"
           git push origin main
